// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render BoardList 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "width": "50%",
        },
        Object {
          "paddingLeft": 20,
          "paddingRight": 10,
        },
      ]
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderRadius": 20,
          "minHeight": 250,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#5e1c73",
            "borderRadius": 20,
            "flex": 1,
            "paddingLeft": 20,
            "paddingRight": 20,
            "paddingTop": 40,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 24,
              "fontWeight": "200",
            }
          }
        >
          Test title
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "width": "50%",
        },
        Object {
          "paddingLeft": 10,
          "paddingRight": 20,
        },
      ]
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderRadius": 20,
          "minHeight": 250,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#5e1c73",
            "borderRadius": 20,
            "flex": 1,
            "paddingLeft": 20,
            "paddingRight": 20,
            "paddingTop": 40,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 24,
              "fontWeight": "200",
            }
          }
        >
          Test title
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Render TodoList 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "paddingLeft": 40,
        "paddingRight": 20,
        "paddingTop": 20,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomColor": "#e9e9e9",
          "borderBottomWidth": 1,
          "flex": 1,
          "paddingBottom": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 24,
            "lineHeight": 36,
          }
        }
      >
        Test title
      </Text>
      <Text
        style={
          Object {
            "color": "#cacaca",
            "fontWeight": "200",
          }
        }
      >
        Test desc
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "paddingLeft": 40,
        "paddingRight": 20,
        "paddingTop": 20,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomColor": "#e9e9e9",
          "borderBottomWidth": 1,
          "flex": 1,
          "paddingBottom": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 24,
            "lineHeight": 36,
          }
        }
      >
        Test title
      </Text>
      <Text
        style={
          Object {
            "color": "#cacaca",
            "fontWeight": "200",
          }
        }
      >
        Test desc
      </Text>
    </View>
  </View>
</View>
`;
